fix hamburger-menu visibility

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,15 +1,20 @@
+body.noflow {
+	overflow-y: hidden;
+}
+
 .header-wrapper {
 	position: fixed;
 	top: 0;
+	z-index: 1;
 	display: flex;
-	width: 100%;
 	justify-content: space-between;
 	align-items: center;
+	width: 100%;
 	height: 50px;
-	padding: 2rem;
+	padding: 0 2rem;
 	background-color: var(--primary-color-dark);
-	z-index: 10;
 	box-shadow: 0 0 15px -7px var(--highlight-color);
+
 	.menu-icon {
 		display: flex;
 		align-items: center;
@@ -18,6 +23,7 @@
 			height: 1.5rem;
 		}
 	}
+
 	nav {
 		display: none;
 		align-items: center;
@@ -26,6 +32,7 @@
 			gap: 1rem;
 		}
 	}
+
 	.nav-login {
 		display: none;
 		align-items: center;
@@ -34,55 +41,61 @@
 			height: 1.2rem;
 		}
 	}
-	.burger-menu {
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		gap: 5px;
-		padding: 1rem;
-		z-index: 11;
-		cursor: pointer;
-		div {
-			width: 25px;
-			height: 2px;
-			background-color: black;
-			transition: all 0.2s ease-in-out;
-		}
+}
+.burger-menu {
+	position: fixed;
+	top: 2px;
+	right: 2rem;
+	z-index: 99;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	gap: 5px;
+	padding: 1rem;
+	cursor: pointer;
+	div {
+		width: 25px;
+		height: 2px;
+		background-color: white;
+		transition: all 0.2s ease-in-out;
+	}
 
-		&.merge {
-			.burger-top {
-				transform: translateY(7px);
-			}
-			.burger-middle {
-				opacity: 0;
-			}
-			.burger-bottom {
-				transform: translateY(-7px);
-			}
+	&.merge {
+		.burger-top {
+			transform: translateY(7px);
 		}
-		&.cross {
-			.burger-top {
-				transform: translateY(7px) rotate(45deg);
-			}
-			.burger-middle {
-				opacity: 0;
-			}
-			.burger-bottom {
-				transform: translateY(-7px) rotate(-45deg);
-			}
+		.burger-middle {
+			opacity: 0;
+		}
+		.burger-bottom {
+			transform: translateY(-7px);
+		}
+	}
+	&.cross {
+		.burger-top {
+			transform: translateY(7px) rotate(45deg);
+		}
+		.burger-middle {
+			opacity: 0;
+		}
+		.burger-bottom {
+			transform: translateY(-7px) rotate(-45deg);
 		}
 	}
 }
+
 .mobile-nav {
 	position: absolute;
+	z-index: 10;
 	top: 0;
 	right: -85vw;
 	width: 80vw;
 	height: 100vh;
 	padding: 60px 0 0 1rem;
-	box-shadow: 0 0 5px black;
-	backdrop-filter: blur(10px);
-	z-index: 10;
+	box-shadow: 0 5px0 5px black;
+	background-color: var(--primary-color-dark-transparent);
+	backdrop-filter: blur(10px) brightness(20%);
+
 	transition: all 0.4s ease-in-out;
 	&.mobile-menu-visible {
 		right: 0;
