--- a/src/components/home/Hero.scss
+++ b/src/components/home/Hero.scss
@@ -1,11 +1,27 @@
 .hero-wrapper {
 	display: flex;
-	padding: 2rem;
+	// padding: 2rem;
+	max-width: 1248px;
+	margin: 0 auto;
+	@media (width < 1024px) {
+		flex-direction: column;
+		gap: 5rem;
+	}
+	.teaser-placeholder {
+		width: 50%;
+		@media (width < 1024px) {
+			display: none;
+		}
+	}
 	.teaser {
 		position: fixed;
 		display: flex;
 		flex-direction: column;
 		gap: 1rem;
+		padding: 2rem;
+		@media (width < 1024px) {
+			position: relative;
+		}
 
 		.name {
 			font-size: 2.5rem;
@@ -21,11 +37,15 @@
 		}
 	}
 	main {
-		transform: translateX(450px);
 		display: flex;
 		flex-direction: column;
-		width: 60%;
-		gap: 10rem;
+		width: 50%;
+		max-width: 1024px;
+		gap: 5rem;
+
+		@media (width < 1024px) {
+			width: 100%;
+		}
 		p {
 			font-size: 1rem;
 		}
@@ -33,15 +53,32 @@
 			display: flex;
 			flex-direction: column;
 			gap: 1rem;
+			padding: 2rem;
 		}
 		.timeline {
 			display: flex;
 			flex-direction: column;
 			gap: 3rem;
+
 			.chapter {
 				display: flex;
 				max-width: 100%;
 				word-wrap: break-word;
+				padding: 2rem;
+				border-radius: 10px;
+				border-top: 1px solid rgba(255, 255, 255, 0);
+				transition: all 0.25s ease-in-out;
+				@media (width < 1024px) {
+					flex-direction: column;
+					gap: 1rem;
+				}
+
+				&:hover {
+					background-color: rgba(255, 255, 255, 0.03);
+					box-shadow: 5px 5px 15px -10px black;
+					border-top: 1px solid rgba(255, 255, 255, 0.2);
+				}
+
 				.time {
 					display: flex;
 					min-width: 200px;
