--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -6,6 +6,7 @@
 
 :root {
 	--primary-color-dark: #0d0e18;
+	--primary-color-dark-transparent: #0d0e1822;
 	--primary-color: #0e163a;
 	--accent-color: #1778c7;
 	--highlight-color: #2fc3ff;
@@ -28,7 +29,10 @@ body {
 	padding-top: calc(2rem + 50px);
 	letter-spacing: 1px;
 }
-
+// body,
+// .noflow {
+// 	overflow-y: hidden;
+// }
 h1,
 h2,
 h3,
@@ -76,12 +80,12 @@ li {
 	width: 100vw;
 }
 
-.inner {
-	margin: 0 auto;
-	@media (width > 1440px) {
-		max-width: 1440px;
-	}
-}
+// .inner {
+// 	margin: 0 auto;
+// 	@media (width > 1440px) {
+// 		max-width: 1440px;
+// 	}
+// }
 
 .flex {
 	display: flex;
